# Migration-IQ

./: .coverage  LICENSE  README.md  pyproject.toml  requirements.txt
migrationiq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
migrationiq/adapters/: __init__.py  alembic_adapter.py  base.py  django_adapter.py
migrationiq/cli/: main.py
migrationiq/config/: __init__.py  settings.py
migrationiq/core/: __init__.py  branch_compare.py  engine.py  migration_graph.py  risk_scoring.py
migrationiq/git/: __init__.py  git_utils.py
migrationiq/rules/: __init__.py  base_rule.py  drop_column_rule.py  drop_table_rule.py  multiple_heads_rule.py  non_null_rule.py  type_change_rule.py
migrationiq/utils/: __init__.py  logger.py
tests/: __init__.py  conftest.py  test_adapters.py  test_branch_compare.py  test_cli.py  test_config.py  test_engine.py  test_migration_graph.py  test_risk_scoring.py  test_rules.py
